# personal-toolbox

./: README.md  Start-Windows.bat  build.bat  install.sh  news_intelligence.spec  pyproject.toml  requirements.txt  启动应用.bat
.monkeycode/: MEMORY.md
.monkeycode/specs/news-intelligence-desktop/: design.md  requirements.md  tasklist.md
news_intelligence_desktop/analysis/: __init__.py
news_intelligence_desktop/app/: main.py
news_intelligence_desktop/config/: china_cities.py  settings.py
news_intelligence_desktop/connectors/: __init__.py  extra_sources.py  generic_api.py  news_rss.py  optional_api.py  packet_capture.py  quote_rss.py  sections.py  tophub.py  tophub_daily.py  uapi_connector.py  weather_earthquake.py  web_page.py
news_intelligence_desktop/services/: api_toolbox.py  app_service.py  brief.py  collector.py  daily_quote.py  data_retention.py  enhanced_services.py  home_dashboard.py  news_quality.py  notification.py  oddity.py  personal.py  policy_capture.py  rate_limiter.py  settings_io.py  source_manager.py  tech_change.py
news_intelligence_desktop/storage/: database.py  repository.py  settings_db.py
news_intelligence_desktop/ui/: console.py  gui.py  qt_app.py  settings_dialog.py  tk_app.py
tests/: test_app_core.py
